# rust-ecommerce

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  justfile
db/: init.sql  package-lock.json  package.json
db/prisma/: schema.prisma
db/prisma/migrations/20221022194054_add_items_table/: migration.sql
db/prisma/migrations/20221025025913_change_timestamptz/: migration.sql
k6/: package-lock.json  package.json
k6/tests/: create_item.ts
src/: main.rs
src/domain/: mod.rs  service.rs
src/domain/commands/: command.rs  create_item.rs  mod.rs
src/domain/entities/: item.rs
src/domain/events/: event.rs  item.rs  mod.rs
src/domain/queries/: get_item.rs  mod.rs  query.rs
src/domain/repositories/: item.rs  mod.rs
src/infra/: mod.rs
src/infra/broker/: broker.rs  mod.rs
src/infra/http/: http.rs  mod.rs
src/infra/http/actix/: actix.rs
src/infra/repositories/: item.rs  mod.rs
terraform/: main.tf  output.tf  variables.tf
