[package]
name = "api-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "bigdecimal" ] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
async-trait = "0.1"
bigdecimal = "0.3.0"