[package]
name = "api-01"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "bigdecimal" ] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1.2", features = [ "v4" ] }
async-trait = "0.1"
bigdecimal = "0.3.0"
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.11.3"