[package]
name = "api-01"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "bigdecimal" ] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = [ "v4" ] }
async-trait = "0.1"
bigdecimal = { version = "0.3", features=["serde"] }
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
dotenvy = "0.15.6"
lapin = "2.1.1"

[dev-dependencies]
mockall = "0.11.3"
